[gd_scene load_steps=16 format=2]

[ext_resource path="res://cars/car_3.png" type="Texture" id=1]
[ext_resource path="res://cars.gd" type="Script" id=2]
[ext_resource path="res://cars/car_1.png" type="Texture" id=3]
[ext_resource path="res://cars/car_2.png" type="Texture" id=4]
[ext_resource path="res://cars/car_4.png" type="Texture" id=5]
[ext_resource path="res://cars/car_5.png" type="Texture" id=6]
[ext_resource path="res://cars/car_10.png" type="Texture" id=7]
[ext_resource path="res://cars/car_8.png" type="Texture" id=8]
[ext_resource path="res://cars/car_12.png" type="Texture" id=9]
[ext_resource path="res://cars/car_6.png" type="Texture" id=10]
[ext_resource path="res://cars/car_7.png" type="Texture" id=11]
[ext_resource path="res://cars/car_11.png" type="Texture" id=12]
[ext_resource path="res://cars/car_9.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "car_4",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "car_11",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "car_12",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "car_10",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "car_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "car_6",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "car_7",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "car_9",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "car_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "car_5",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "car_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "car_8",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.0
height = 64.0

[node name="cars" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="detector" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="detector"]
position = Vector2( 13, 0 )
polygon = PoolVector2Array( 28, -8, 97, -40, 96, 42, 28, 10 )

[node name="many_cars" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "car_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -12, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
